# SPACE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  cmake_configure_for_server.sh  run.py  run.sh  small.py
data/1070ti/: multi_cluster_quadro_double.txt  multi_cluster_quadro_float.txt  multi_cluster_quadro_int.txt  multi_cluster_quadro_uint16_t.txt  multi_cluster_quadro_uint32_t.txt  multi_cluster_quadro_uint64_t.txt  multi_cluster_quadro_uint8_t.txt  single_cluster_quadro_double.txt  single_cluster_quadro_float.txt  single_cluster_quadro_int.txt  single_cluster_quadro_uint16_t.txt  single_cluster_quadro_uint32_t.txt  single_cluster_quadro_uint64_t.txt  single_cluster_quadro_uint8_t.txt  uniform_quadro_double.txt  uniform_quadro_float.txt  uniform_quadro_int.txt  uniform_quadro_uint16_t.txt  uniform_quadro_uint32_t.txt  uniform_quadro_uint64_t.txt  uniform_quadro_uint8_t.txt
data/3080/: multi_cluster_3080_double.txt  multi_cluster_3080_float.txt  multi_cluster_3080_int.txt  multi_cluster_3080_uint16_t.txt  multi_cluster_3080_uint32_t.txt  multi_cluster_3080_uint64_t.txt  multi_cluster_3080_uint8_t.txt  single_cluster_3080_double.txt  single_cluster_3080_float.txt  single_cluster_3080_int.txt  single_cluster_3080_uint16_t.txt  single_cluster_3080_uint32_t.txt  single_cluster_3080_uint64_t.txt  single_cluster_3080_uint8_t.txt  uniform_3080_double.txt  (+6 more)
res/: dl.sh
src/: benchmarks.cuh  csv_loader.hpp  cub_wraps.cuh  cuda_time.cuh  cuda_try.cuh  data_generator.cuh  fast_prng.cuh  main.cu  streaming_3pass.cuh  utils.cuh  utils.hpp
visualization/: draw.py
(+49 files in other folders)
